fixed alignment issue with texts

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -387,14 +387,9 @@ button {
     .information-side {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
       padding: 0rem 2rem;
       justify-content: space-around;
-
-      .text-message {
-        align-self: flex-start;
-      }
-    
 
     input {
       background-color: transparent;
